--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        kotlin_version = '1.4.32'
+    }
     repositories {
         google()
         jcenter()
-        maven { url 'https://www.jitpack.io' }
+        maven { url 'E:\\repo' }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.3"
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5' // Add this line
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:4.0.1'
+
+        classpath 'com.efg:cpplugin:1.1.5'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -17,7 +20,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url 'https://www.jitpack.io' }
+        maven { url 'E:\\repo' }
     }
 }
 
