--- a/login/build.gradle
+++ b/login/build.gradle
@@ -1,12 +1,6 @@
 plugins {
-    id 'com.android.application'
-    id 'style-checkbase'
-}
-
-checkBase {
-    throwException = false
-    exceptionAtOnce = false
-    openLog = true
+    id 'com.android.library'
+    id 'kotlin-android'
 }
 
 android {
@@ -14,12 +8,12 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.ywh.plugincp"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -32,24 +26,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
-//    productFlavors {
-//        google {
-//
-//        }
-//        qh360 {
-//
-//        }
-//        baidu {
-//
-//        }
-//        self {
-//
-//        }
-//    }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(path: ':base')
 }
